# PCB2Gcode

./: CMakeLists.txt  LICENSE  README.md  pcb2gcode.pro  resources.qrc
include/: GerberFileManager.h  gcodeConverter.h  gerbermanager.h  pcb2gcode.h  settings.h  uart.h
python/: gerber_wrapper.py  gerber_wrapper.py.autosave
src/: GerberFileManager.cpp  PCB2Gcode.cpp  gcodeConverter.cpp  gerbermanager.cpp  main.cpp  pcb2gcode.cpp  settings.cpp  uart.cpp
ui/: PCB2Gcode.ui
